fix: fix custom scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 @layer utilities {
   .scrollbar::-webkit-scrollbar {
-    width: 12px;
-    height: 15px;
+    width: 10px;
+    height: 10px;
   }
 
   .scrollbar::-webkit-scrollbar-track {
@@ -15,7 +15,7 @@
   .scrollbar::-webkit-scrollbar-thumb {
     background: rgba(154, 159, 166, 0.59);
     border-radius: 100vh;
-    border: 3px solid #f6f7ed;
+    /* border: 3px solid #f6f7ed; */
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
